--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,10 @@ android {
 
     defaultConfig {
         applicationId "ro.mdc_software.mypuppy"
+
         minSdkVersion 21
         targetSdkVersion 30
+
         versionCode 1
         versionName "1.0"
 
@@ -42,15 +44,22 @@ android {
 
 dependencies {
 
+    // Androidx.
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
+
+    // Material Design.
     implementation 'com.google.android.material:material:1.3.0'
+
+    // Compose.
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
     implementation 'androidx.activity:activity-compose:1.3.0-alpha03'
-    testImplementation 'junit:junit:4.+'
+
+    // Testing.
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
