--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation 'androidx.activity:activity-compose:1.3.0-alpha03'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha03"
 
     // Coil.
     implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.0"
